# pypi-workflow

./: README.md  pyproject.toml  tox.ini
.github/workflows/: coverage.yml  pre_release.yml  release.yml  tests.yml
