[tool.poetry]
name = "pypi-workflow"
version = "0.1.0"
description = ""
authors = ["SpaceShaman <spaceshaman@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
